<resources>
    <string name="app_name">Story App</string>
    <string name="title">Welcome To Story App</string>
    <string name="subtitle">Login To Create A Story</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="register_subtitle">Register to create Account</string>
    <string name="name">Name</string>
    <string name="sudah_punya_akun">Sudah Punya Akun?</string>
    <string name="photo_story">Photo Story</string>
    <string name="save_bookmark">Save BookMark</string>
    <string name="stories">Story App</string>
    <string name="create_story">Create Story</string>
    <string name="no_data">No Data</string>
    <string name="stories_not_found_error">Story tidak ditemukan</string>
    <string name="logout">Logout</string>
    <string name="language_setting">Language Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_success_message">Login Berhasil</string>
    <string name="login_error_message">Email atau Password salah silahkan coba lagi</string>
    <string name="press_back_again_to_exit">Press back Again To Exit</string>
    <string name="please_fill_the_email">Please Fill The Email</string>
    <string name="please_fill_the_password">Please Fill The Password</string>
    <string name="sign_in_success">Login Berhasil</string>
    <string name="sign_in_failed">Login gagal</string>
    <string name="sign_out">Log Out</string>
    <string name="are_you_sure">Apakah Kamu Yakin?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up">Sign Up</string>
    <string name="please_fill_your_name">Please Fill Your Name</string>
    <string name="password_must_be_at_least_8_character">Password must be at least 8 character</string>
    <string name="create_an_account_success">Create an Account Success</string>
    <string name="create_an_account_failed">Create An Account Failed</string>
    <string name="failed_to_load_data">Failed to Load Data</string>
    <string name="camera">Camera\t</string>
    <string name="gallery">Galeri</string>
    <string name="description">Descripsi</string>
    <string name="upload">Upload</string>
    <string name="don_t_have_permission_to_access_camera">don\'t have permission to access camera</string>
    <string name="choose_a_picture">Choose a Picture</string>
    <string name="please_insert_the_image_first">Please Insert the Image</string>
    <string name="please_fill_the_description_first">Please fill the description first</string>
    <string name="add_new_story">Add New Story</string>
    <string name="add_new_story_failed">Add New Story Failed</string>
    <string name="add_new_story_success">Add New Story Success</string>
    <string name="add_new_story_guest">add_new_story_guest</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="failed_to_capture_an_image">Failed to capture an image</string>
    <string name="failed_to_open_camera">Failed to Open Camera</string>
    <string name="detail_story">Detail Story\n</string>
    <string name="detail_photo_story">Detail Photo Story\n</string>
    <string name="detail_save_bookmark">Detail Save Bookmark</string>
    <string name="retry">Retry</string>
    <string name="maps">Maps</string>
</resources>

